apps/cfe-nginx-2-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: 'true'
    nginx.ingress.kubernetes.io/ssl-passthrough: 'true'
  labels:
    app.kubernetes.io/instance: cfe-nginx-2
  name: cfe-nginx-ingress
  namespace: abc-123
spec:
  rules:
    - host: cfe-nginx2.terraformingkubernetes.com
      http:
        paths:
          - backend:
              service:
                name: cfe-nginx-service
                port:
                  name: http-port
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - cfe-nginx2.terraformingkubernetes.com
      secretName: cfe-nginx-tls-secret
