apps/cfe-nginx.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cfe-nginx-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: cfe-nginx-deployment
  template:
    metadata:
      labels:
        app: cfe-nginx-deployment
    spec:
      containers:
        - name: cfe-nginx-container
          image: codingforentrepreneurs/cfe-nginx:latest
          imagePullPolicy: Always
          ports:
            - name: cfe-nginx-port
              containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: cfe-nginx-service
spec:
  selector:
    app: cfe-nginx-deployment
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: cfe-nginx-port


---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cfe-nginx-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  rules:
   - host: cfe-nginx.terraformingkubernetes.com
     http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: cfe-nginx-service
              port:
                name: 80
